--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -8,7 +8,7 @@
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>Category</h4>
+        <h4>Component category</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
