--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -1,4 +1,4 @@
-@model ASPNETCORE.Models.CategoryComponents.Category
+@model ASPNETCORE.Models.CategoryComponents.ComponentType
 
 @{
     ViewData["Title"] = "Edit";
@@ -19,6 +19,16 @@
                 <span asp-validation-for="Name" class="text-danger" />
             </div>
         </div>
+        
+        <div class="form-group">
+            <label asp-for="CategoryComponentTypes" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Name" text="@Model.CategoryComponentTypes.First(x => x.ComponentTypeId == Model.)" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger" />
+            </div>
+        </div>
+        
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
