--- a/Views/ComponentTypes/Index.cshtml
+++ b/Views/ComponentTypes/Index.cshtml
@@ -73,8 +73,8 @@
                 @Html.DisplayFor(modelItem => item.WikiLink)
             </td>
             <td>
+                @Html.ActionLink("Components", "Index", "Components", new { id = item.ComponentTypeId }) |
                 <a asp-action="Edit" asp-route-id="@item.ComponentTypeId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ComponentTypeId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ComponentTypeId">Delete</a>
             </td>
         </tr>
