--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -26,7 +26,7 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    @Html.ActionLink("Component types", "Index", "ComponentType", new { id = item.CategoryId }) |
+                    @Html.ActionLink("Component types", "Index", "ComponentTypes", new { id = item.CategoryId }) |
                     <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
                     <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
                 </td>
