--- a/Views/ComponentType/Create.cshtml
+++ b/Views/ComponentType/Create.cshtml
@@ -1,13 +1,13 @@
 @model ASPNETCORE.Models.CategoryComponents.ComponentType
 @using ASPNETCORE.Models.CategoryComponents
-
 @{
     ViewData["Title"] = "Create";
 }
-
 <h2>Create</h2>
-
 <form asp-action="Create">
+    @{
+        List<int> selectedCategories = new List<int>();
+    }
     <div class="form-horizontal">
         <h4>ComponentType</h4>
         <hr />
@@ -62,9 +62,15 @@
             </div>
         </div>
         <div class="form-group">
+            <label asp-for="CategoryComponentTypes" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <select asp-for="@selectedCategories" asp-items="@ViewBag.Categories" class="form-control"></select>
+            </div>
+        </div>
+        <div class="form-group">
             <label asp-for="Status" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <select asp-for="Status" asp-items="Html.GetEnumSelectList<ComponentType.ComponentTypeStatus>()" class="form-control"></select>
+                <select asp-for="Status" class="form-control" asp-items="Html.GetEnumSelectList<ComponentType.ComponentTypeStatus>()"></select>
                 <span asp-validation-for="Status" class="text-danger" />
             </div>
         </div>
@@ -82,11 +88,9 @@
         </div>
     </div>
 </form>
-
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
