--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -1,4 +1,4 @@
-@model ASPNETCORE.Models.CategoryComponents.ComponentType
+@model ASPNETCORE.Models.CategoryComponents.Category
 
 @{
     ViewData["Title"] = "Edit";
@@ -19,15 +19,6 @@
                 <span asp-validation-for="Name" class="text-danger" />
             </div>
         </div>
-        
-        <div class="form-group">
-            <label asp-for="CategoryComponentTypes" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Name" text="@Model.CategoryComponentTypes.First(x => x.ComponentTypeId == Model.)" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger" />
-            </div>
-        </div>
-        
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
